# fairshare

./: .editorconfig  .gitignore  AGENTS.md  README.md  docker-compose.yml  todo.md
.github/workflows/: ci.yml
api/: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  create_test_groups.py  docker-compose.yml  main.py  pyproject.toml
api/docker/: Dockerfile  config.env  entrypoint.sh  servers.json
api/routers/: health.py
api/routers/tests/: test_health.py
api/src/: conftest.py  main.py
api/src/alembic/: env.py
api/src/alembic/versions/: 1e2a0c47d83b_add_expense_splits.py  2f2b9b2a3f3b_add_created_by_to_group_settlements.py  36f78f4adf92_add_created_at_to_expense_group_table.py  4b1e4db1f12d_add_group_settlements.py  51f0c9b8d4c2_add_group_join_requests.py  69fd693fbb60_add_expense_table.py  9a4c7f2f0a3d_add_invite_code_to_expense_group.py  a1b2c3d4e5f6_add_google_auth_to_user.py  cff8a55099d6_add_expense_group_and_expense_group_.py  e8e99601723a_initial_migration.py
api/src/auth/: dependencies.py  google.py  models.py  router.py  security.py  service.py
api/src/auth/tests/: test_dependencies.py  test_router.py  test_security.py  test_service.py
api/src/core/: conf.py  dependencies.py  models.py  money.py  router.py
api/src/core/tests/: test_router.py
api/src/db/: dependencies.py  models.py
api/src/db/models/: __init__.py
api/src/db/tests/: test_dependencies.py
api/src/expenses/: dependencies.py  models.py  router.py  service.py
api/src/expenses/tests/: test_dependencies.py  test_router.py  test_service.py
api/src/groups/: dependencies.py  models.py  router.py  service.py  utils.py
api/src/groups/tests/: test_groups.py
web/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
web/.husky/: pre-commit
web/coverage/: coverage-final.json  index.html
web/coverage/Button/: Button.tsx.html  index.html
web/coverage/Card/: Card.tsx.html  index.html
web/docker/: Dockerfile  config.env  entrypoint.sh
web/src/: App.tsx  index.css  main.tsx
web/src/assets/icons/: alert-icons.tsx  form-icons.tsx  loading-icons.tsx  navigation-icons.tsx
web/src/components/: ErrorBoundary.tsx  index.ts
web/src/components/auth/: AuthModal.tsx  AuthTabs.tsx  LoginForm.test.tsx  LoginForm.tsx  RegisterForm.test.tsx  RegisterForm.tsx  index.ts
web/src/context/: AuthContext.test.tsx  AuthContext.tsx
web/src/hooks/: index.ts  useApiFormErrors.test.ts  useApiFormErrors.ts  useAuth.ts  useAuthModal.test.ts  useAuthModal.ts  useCreateGroupModal.ts  useInfiniteScroll.ts  useJoinGroupModal.ts
web/src/pages/: DashboardPage.tsx  GroupDetailPage.test.tsx  GroupDetailPage.tsx  HomePage.tsx  StyleguidePage.tsx  index.ts
web/src/router/: index.tsx
web/src/schema/: auth.ts  expenses.ts  groups.ts  index.ts  settlements.ts
web/src/services/: api.test.ts  api.ts  auth.test.tsx  auth.ts  expenses.ts  groups.test.ts  groups.ts  index.ts  queryClient.ts  settlements.ts
web/src/utils/: clipboard.ts  errorUtils.ts  externalStore.ts  formatUtils.ts
(+46 files in other folders)
