[project]
name = "fairshare"
version = "0.1.0"
description = "Open-source expense splitting and settlement tracking app. Split bills fairly, track shared expenses, and settle up with friends."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "email-validator==2.3.0",
    "fastapi==0.128.0",
    "uvicorn==0.40.0",
]

[dependency-groups]
dev = [
    "ruff==0.14.10",
    "fastapi-cli==0.0.20",
    "ty==0.0.10",
    "pytest==8.4.1",
    "httpx==0.28.1",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.pyproject-fmt]
keep_full_version = true
