[project]
name = "fairshare"
version = "0.1.0"
description = "Open-source expense splitting and settlement tracking app. Split bills fairly, track shared expenses, and settle up with friends."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "alembic==1.17.2",
  "email-validator==2.3.0",
  "fastapi==0.128.0",
  "psycopg[binary]==3.3.2",
  "pwdlib[argon2]==0.3.0",
  "pydantic-settings==2.12.0",
  "pyjwt==2.10.1",
  "python-multipart==0.0.22",
  "sqlmodel==0.0.31",
  "uvicorn==0.40.0",
]

[dependency-groups]
dev = [
  "fastapi-cli==0.0.20",
  "httpx==0.28.1",
  "pre-commit==4.5.1",
  "pyproject-fmt==2.11.1",
  "pytest==8.4.1",
  "pytest-asyncio==1.0.0",
  "ruff==0.14.11",
  "ty==0.0.10",
]

[tool.ruff]
target-version = "py312"
line-length = 120

exclude = [".cache", ".venv"]

format.skip-magic-trailing-comma = true
lint.isort.split-on-trailing-comma = false

[tool.pytest.ini_options]
testpaths = ["src"]
norecursedirs = ["data", ".venv", ".cache", ".ruff_cache", ".pytest_cache", "__pycache__"]

[tool.pyproject-fmt]
keep_full_version = true

[tool.uv]
package = false
